add the first half of the oath of love

--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -98,74 +98,27 @@ commitment to the collective's way of life.
 #### The Oath of Love
 The two partners face each other, often in the center of their community circle. They hold hands.)
 
-Partner 1: I see you, a sovereign self, a unique and uncharted map whose path I
-am honored to walk beside. I cannot, and will not, claim you as my own. You are
-not a destination to be reached, but a journey I am grateful to witness.
-
-Therefore, I make this pledge to you, in the presence of our community:
-
-With the strength of Brac, I pledge my hands to help build the world you dream
-of, and to share the labor of our life together.
-
-With the empathy of Hearth, I pledge to be a warm place for you, to care for you
-in sickness, and to witness your sorrows and your joys without judgment.
-
-With the curiosity of Anida, I pledge to never stop learning you, to ask
-questions with an open heart, and to honor the truths you hold.
-
-With the spirit of Revel, I pledge to seek and create joy with you, to fill our
-home with laughter, and to remember that even in struggle, there is a song to be
-sung.
-
-With the wisdom of Koinon, I pledge to be your partner in the circle of our
-lives, to listen as much as I speak, and to find the common thread that weaves
-our needs together.
-
-I will honor your solitude, your inner world of Idios, and I will walk with you
-into the beautiful chaos of Poreia, embracing the changes that will shape us
-both. This is not a chain I offer, but an open hand. I choose to walk with you."
-
-Partner 2: "I see you, a sovereign self, a free and wandering star whose orbit I
-am joyful to share for a time. I cannot, and will not, claim you as my own. You
-are not a harbor to possess, but a fellow ship on a wide and open sea.
-
-Therefore, I make this pledge to you, in the presence of our community:
-
-With the stewardship of Silvan, I pledge to help tend the ecosystem of our
-partnership, to honor its cycles of growth and rest, and to nourish its roots.
-
-With the vision of Tekne, I pledge my mind to help solve the problems we will
-face, to share my tools openly, and to build a life of elegant, functional
-beauty with you.
-
-With the patience of Kriton, I pledge to face conflict with you honestly, to
-seek to mend what is broken between us, and to take accountability for the harm
-I may cause.
-
-With the spirit of Revel, I pledge to be your partner in play, to celebrate your
-victories, and to remind you of the light when all you see is shadow.
-
-With the solidarity of Koinon, I pledge to be your comrade in the struggle, to
-balance our ledger of mutual aid, and to ensure our partnership strengthens our
-whole community.
-
-I will honor your autonomy, your unchartable world of Idios, and I will follow
-you on any path chosen by Poreia, trusting the journey we make together. This is
-not a cage I offer, but an open sky. I choose to fly with you."
-
-The Exchanging of Tokens (Instead of expensive rings, partners often exchange
-handmade, meaningful tokens—a carved wooden ring, a braided cord, a metal
-bracelet they forged themselves.)
-
-Partner 1: (slipping the token onto the other's finger or wrist) "With this
-circle, I join my path to yours. It has no beginning and no end, just as my care
-for you will have no condition. It is not a lock, but a link in a chain of
-mutual aid we forge together. Walk with me."
-
-Partner 2: (slipping the token onto the other's finger or wrist) "With this
-circle, I weave my thread into your life. It is a symbol of my promise to be a
-point of return, but never a tether. It is not a claim, but a welcome. Journey
-with me."
+<HisyeoTabs>
+    <p>hûnsûon kut: noyo dêko nîmû xe li cizî yê kon hûkun mûlû li nôkso nêôs wîxês fos fuî tîton fos noyo dôstoc istihol til xe li nô hoî sôbo yê. noyo kôî, kê somo fuî noyo mût nîmû. nîmû li yôk boxô kônyêc fos li gîk hoî, lêkin wûôt fos noyo li konxo til xe dêko.&emsp;<em>Partner 1: I see you, a sovereign self, a unique and uncharted map whose path I am honored to walk beside. I cannot, and will not, claim you as my own. You are not a destination to be reached, but a journey I am grateful to witness.</em></p>
+    <p>bînê û noyo kôs buswêlin mût nîmû hoî gô yê zomî nûs:&emsp;<em>Therefore, I make this pledge to you, in the presence of our community:</em></p>
+    <p>tô gîôn yê ôtsôtot Îfêstôs û noyo kôs buswêlin yê zûngô noyo mût yoldûn yê fos kôson nucoto fos nîmû cînlî hôlmo yê, ûn xe li ûnîdû yê mêdûson yê zîwit xe ofek xokôn dîzel.&emsp;<em>With the strength of Îfêstôs, I pledge my hands to help build the world you dream of, and to share the labor of our life together.</em></p>
+    <p>tô zusbot kon hêfîn yê ôtsôtot Bostet û noyo kôs buswêlin mût xe li boxô tût til nîmû, mût yoldûn yê sobûnî nîmû mût xe dêko kûyô nîmû ûn fûnlôk nîmû bi yôk tûlokon&emsp;<em>With the empathy of Bostet, I pledge to be a warm place for you, to care for you in sickness, and to witness your sorrows and your joys without judgment.</em></p>
+    <p>tô fôgîcîn yê ôtsôtot Suluswutî û noyo kôs buswêlin yê fos hoî yôk wokût nîltûgu xe bêûdo nîmû, ûn xe sôlû bi lozîdô but ûn xe golun hokîkî fos nîmû ogolol.&emsp;<em>With the curiosity of Suluswutî, I pledge to never stop learning you, to ask questions with an open heart, and to honor the truths you hold.</em></p>
+    <p>tô lûok yê ôtsôtot Kulîôbî û noyo kôs buswêlin yê xe yosten, ûn xe kôs fûnlôk ofek nîmû, ûn xe li êo mûlû ôlê niwos nûs tô kon lîûlê, ûn xe hûsku fos hoî kon kôntêsto tônkô li kontol fos kontol.&emsp;<em>With the spirit of Kulîôbî, I pledge to seek and create joy with you, to fill our home with laughter, and to remember that even in struggle, there is a song to be sung.</em></p>
+    <p>tô colot yê ôtsôtot Tîengûun û noyo kôs buswêlin yê xe li hûnsûon hoî wutun yê zîwit nûs, ûn xe tenkîn bi êto en fos noyo kôto, ûn xe yosten doî fîmôsyôs xe zohît buswen nûs bi ûnîdû.&emsp;<em>With the wisdom of Tîengûun, I pledge to be your partner in the circle of our lives, to listen as much as I speak, and to find the common thread that weaves our needs together.</em></p>
+    <p>noyo ke golun kon tôlkî nîmû ûn nucoto lîmîen yê ôtsôtot Xôcibîlî ûn û noyo ke li nô ofek nîmû mût hoôs hosîn yê ôtsôtot Hûlicîn bi xe onkûol dônûxin fos ke bôsol dûî nûs. ôfo li yôk doî ûlôgun kon cûxîen fos noyo cûdo lêkin û ni li zûngô but. noyo gôcîdon xe li nô ofek nîmû.&emsp;<em>I will honor your solitude, your inner world of Xôcibîlî, and I will walk with you into the beautiful chaos of Hûlicîn, embracing the changes that will shape us both. This is not a chain I offer, but an open hand. I choose to walk with you."</em></p>
+    <p>hûnsûon dûî: noyo dêko nîmû xe li cizî yê kon hûkun mûlû li bînton kon tuluti fôlnî fos noyo fuî êto fûnlôk til xe li ûtok lon yoûtî wokût hoî ogogê yê. noyo kôî, kê somo fuî noyo mût nîmû. nîmû li yôk boxô xômûtlô kon lufono fos fuî, lêkin oûtô sûtûô hoî xômûtlô but nulto.&emsp;<em>Partner 2: "I see you, a sovereign self, a free and wandering star whose orbit I am joyful to share for a time. I cannot, and will not, claim you as my own. You are not a harbor to possess, but a fellow ship on a wide and open sea.</em></p>
+    <p>bînê û noyo kôs buswêlin mût nîmû hoî gô yê zomî nûs:&emsp;<em>Therefore, I make this pledge to you, in the presence of our community:</em></p>
+    <p>&emsp;<em>With the stewardship of Silvan, I pledge to help tend the ecosystem of our partnership, to honor its cycles of growth and rest, and to nourish its roots.</em></p>
+    <p>&emsp;<em>With the vision of Unonsî, I pledge my mind to help solve the problems we will face, to share my tools openly, and to build a life of elegant, functional beauty with you.</em></p>
+    <p>&emsp;<em>With the patience of Wicnû, I pledge to face conflict with you honestly, to seek to mend what is broken between us, and to take accountability for the harm I may cause.</em></p>
+    <p>&emsp;<em>With the spirit of Kulîôbî, I pledge to be your partner in play, to celebrate your victories, and to remind you of the light when all you see is shadow.</em></p>
+    <p>&emsp;<em>With the solidarity of Tîengûun, I pledge to be your comrade in the struggle, to balance our ledger of mutual aid, and to ensure our partnership strengthens our whole community.</em></p>
+    <p>&emsp;<em>I will honor your autonomy, your unchartable world of Xôcibîlî, and I will follow you on any path chosen by Hûlicîn, trusting the journey we make together. This is not a cage I offer, but an open sky. I choose to fly with you."</em></p>
+    <p>&emsp;<em>The Exchanging of Tokens (Instead of expensive rings, partners often exchange handmade, meaningful tokens—a carved wooden ring, a braided cord, a metal bracelet they forged themselves.)</em></p>
+    <p>&emsp;<em>Partner 1: (slipping the token onto the other's finger or wrist) "With this circle, I join my path to yours. It has no beginning and no end, just as my care for you will have no condition. It is not a lock, but a link in a chain of mutual aid we forge together. Walk with me."</em></p>
+    <p>&emsp;<em>Partner 2: (slipping the token onto the other's finger or wrist) "With this circle, I weave my thread into your life. It is a symbol of my promise to be a point of return, but never a tether. It is not a claim, but a welcome. Journey with me."</em></p>
+</HisyeoTabs>
 
 ### Prayers
 These are for personal or small group reflection, for moments when one seeks
@@ -175,31 +128,35 @@ balance or guidance from the entire pantheon.
 For when one feels pulled too strongly in one direction—too much work, too much
 solitude, too much chaos.
 
-Liberator Collective, hear me.
-The hands of Brac have made me strong, but I have forgotten the joy of Revel.
-The questions of Anida have made me sharp, but I have neglected the quiet of Hearth.
-The path of Poreia has been exciting, but I have lost my place in the circle of Koinon.
-The mirror of Idios shows me myself, but I have not looked outward to the ecosystem of Silvan.
-Grant me the wisdom to find the pattern in the chaos.
-Help me mend the fractures in my own life with the patience of Kriton, and use the tools of Tekne to build a more balanced self.
-I am a community of one, and I wish to be whole.
+<HisyeoTabs>
+    <p>&emsp;<em>Liberator Collective, hear me.</em></p>
+    <p>&emsp;<em>The hands of Îfêstôs have made me strong, but I have forgotten the joy of Kulîôbî.</em></p>
+    <p>&emsp;<em>The questions of Suluswutî have made me sharp, but I have neglected the quiet of Bostet.</em></p>
+    <p>&emsp;<em>The path of Hûlicîn has been exciting, but I have lost my place in the circle of Tîengûun.</em></p>
+    <p>&emsp;<em>The mirror of Xôcibîlî shows me myself, but I have not looked outward to the ecosystem of Dimîtu.</em></p>
+    <p>&emsp;<em>Grant me the wisdom to find the pattern in the chaos.</em></p>
+    <p>&emsp;<em>Help me mend the fractures in my own life with the patience of Wicnû, and use the tools of Unonsî to build a more balanced self.</em></p>
+    <p>&emsp;<em>I am a community of one, and I wish to be whole.</em></p>
+</HisyeoTabs>
 
 #### A Prayer for a New Endeavor
 Spoken before starting a new project, a journey, a relationship, or a new phase
 of life.
 
-As I stand on this threshold, I ask for the guidance of the Collective.
-Grant me the vision of Tekne to see what could be.
-Grant me the strength of Brac to lay a good foundation.
-Grant me the wisdom of Koinon to collaborate with others in good faith.
-Grant me the empathy of Hearth to understand the impact of my work.
-Grant me the courage of Anida to question my own assumptions along the way.
-Let Silvan remind me of the natural cycles of growth and rest.
-Let Kriton guide me to mend my mistakes with integrity.
-Let Idios keep me true to my own purpose.
-Let Revel ensure there is joy in the struggle.
-And let Poreia bless this endeavor with just enough chaos to make it interesting.
-The path begins. May I walk it well.
+<HisyeoTabs>
+    <p>&emsp;<em>As I stand on this threshold, I ask for the guidance of the Collective.</em></p>
+    <p>&emsp;<em>Grant me the vision of Unonsî to see what could be.</em></p>
+    <p>&emsp;<em>Grant me the strength of Îfêstôs to lay a good foundation.</em></p>
+    <p>&emsp;<em>Grant me the wisdom of Tîengûun to collaborate with others in good faith.</em></p>
+    <p>&emsp;<em>Grant me the empathy of Bostet to understand the impact of my work.</em></p>
+    <p>&emsp;<em>Grant me the courage of Suluswutî to question my own assumptions along the way.</em></p>
+    <p>&emsp;<em>Let Dimîtu remind me of the natural cycles of growth and rest.</em></p>
+    <p>&emsp;<em>Let Wicnû guide me to mend my mistakes with integrity.</em></p>
+    <p>&emsp;<em>Let Xôcibîlî keep me true to my own purpose.</em></p>
+    <p>&emsp;<em>Let Kulîôbî ensure there is joy in the struggle.</em></p>
+    <p>&emsp;<em>And let Hûlicîn bless this endeavor with just enough chaos to make it interesting.</em></p>
+    <p>&emsp;<em>The path begins. May I walk it well.</em></p>
+</HisyeoTabs>
 
 ## Shrines
 
