Add more practice translations

--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -109,8 +109,8 @@ The two partners face each other, often in the center of their community circle.
     <p>noyo ke golun kon tôlkî nîmû ûn nucoto lîmîen yê ôtsôtot Xôcibîlî ûn û noyo ke li nô ofek nîmû mût hoôs hosîn yê ôtsôtot Hûlicîn bi xe onkûol dônûxin fos ke bôsol dûî nûs. ôfo li yôk doî ûlôgun kon cûxîen fos noyo cûdo lêkin û ni li zûngô but. noyo gôcîdon xe li nô ofek nîmû.&emsp;<em>I will honor your solitude, your inner world of Xôcibîlî, and I will walk with you into the beautiful chaos of Hûlicîn, embracing the changes that will shape us both. This is not a chain I offer, but an open hand. I choose to walk with you."</em></p>
     <p>hûnsûon dûî: noyo dêko nîmû xe li cizî yê kon hûkun mûlû li bînton kon tuluti fôlnî fos noyo fuî êto fûnlôk til xe li ûtok lon yoûtî wokût hoî ogogê yê. noyo kôî, kê somo fuî noyo mût nîmû. nîmû li yôk boxô xômûtlô kon lufono fos fuî, lêkin oûtô sûtûô hoî xômûtlô but nulto.&emsp;<em>Partner 2: "I see you, a sovereign self, a free and wandering star whose orbit I am joyful to share for a time. I cannot, and will not, claim you as my own. You are not a harbor to possess, but a fellow ship on a wide and open sea.</em></p>
     <p>bînê û noyo kôs buswêlin mût nîmû hoî gô yê zomî nûs:&emsp;<em>Therefore, I make this pledge to you, in the presence of our community:</em></p>
-    <p>&emsp;<em>With the stewardship of Silvan, I pledge to help tend the ecosystem of our partnership, to honor its cycles of growth and rest, and to nourish its roots.</em></p>
-    <p>&emsp;<em>With the vision of Unonsî, I pledge my mind to help solve the problems we will face, to share my tools openly, and to build a life of elegant, functional beauty with you.</em></p>
+    <p>tô kon cûfo yê ôtsôtot Dimîtu û noyo kôs buswêlin yê xe li yoldûn mût xe lîun bobôun bîômu yê kon hûnsûon nûs, ûn xe golun ogogê nî yê nîôk ûn conzodo, ûn xe mokon êo zôhûn ôlê zîzîyo ni.&emsp;<em>With the stewardship of Dimîtu, I pledge to help tend the ecosystem of our partnership, to honor its cycles of growth and rest, and to nourish its roots.</em></p>
+    <p>tô kon dêko yê ôtsôtot Unonsî û noyo kôs buswêlin yê dûuncît noyo mût xe li yoldûn hôn xe yosten zuwobû mût îxôlô fos nûs cînlî, ûn xe munyufo yôn noyo bi yôk fûtsûn, ûn xe kôson zîwit yê hosîn kînôxî moxo ofek nîmû.&emsp;<em>With the vision of Unonsî, I pledge my mind to help solve the problems we will face, to share my tools openly, and to build a life of elegant, functional beauty with you.</em></p>
     <p>&emsp;<em>With the patience of Wicnû, I pledge to face conflict with you honestly, to seek to mend what is broken between us, and to take accountability for the harm I may cause.</em></p>
     <p>&emsp;<em>With the spirit of Kulîôbî, I pledge to be your partner in play, to celebrate your victories, and to remind you of the light when all you see is shadow.</em></p>
     <p>&emsp;<em>With the solidarity of Tîengûun, I pledge to be your comrade in the struggle, to balance our ledger of mutual aid, and to ensure our partnership strengthens our whole community.</em></p>
