Update spatial relations

--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -11,17 +11,41 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Spatial Relations
 
-How to relate the position of our surroundings & objects.
+Hîsyêô uses a mix of specific prepositions for radial relationships (In/On) and
+a locative noun construction for relative positions (Front/Back/Top/Bottom).
 
-Hîsyêô does not use specific prepositions for concepts like "inside," "under,"
-or "behind." Instead, it uses a **Locative Nucleus Construction**.
+This system is governed by the **Radial Growth Metaphor**: just as a tree grows
+outward, Hîsyêô speakers perceive "Inside" as the past/origin and "On/Surface"
+as the future/destination.
 
-## The Structure
+## Radial Prepositions (Space & Time)
 
-To describe a specific position relative to an object, you use the generic
-location preposition <HisyeoWord is='hoî'/> (at/in/on), followed by a content
-word representing the specific position (top, bottom, inside) acting as the
-nucleus, followed by the possessive connector <HisyeoWord is='yê'/> (of).
+These two prepositions handle the fundamental relationship of containment and sequence. They replace the English concepts of "In" and "On" while simultaneously handling "Before" and "After."
+
+| Preposition | Spatial Meaning | Temporal Meaning       | Metaphor              |
+|:------------|:----------------|:-----------------------|:----------------------|
+| <HisyeoWord is='ilik'/>    | **In / Inside** | **Before / Preceding** | The Core / The Memory |
+| <HisyeoWord is='cihôû'/>   | **On / Upon**   | **After / Succeeding** | The Bark / The Growth |
+
+**Examples in Space:**
+
+<HisyeoTabs>
+    <p>nîo li gô ilik niwos.&emsp;<em>He is in the house.</em><small>(Contained by it)</small></p>
+    <p>tômôs li gô cihôû mîêbil.&emsp;<em>The book is on the table.</em><small>(Resting on the surface)</small></p>
+</HisyeoTabs>
+
+**Examples in Time:**
+
+<HisyeoTabs>
+    <p>ilik lono ôfo...&emsp;<em>Before today...</em><small>(In the time preceding today)</small></p>
+    <p>cihôû lono ôfo...&emsp;<em>After today...</em><small>(On top of today / In the future)</small></p>
+</HisyeoTabs>
+
+## Locative Nucleus Construction
+
+For specific physical orientations that are not strictly "In" or "On," Hîsyêô
+uses the generic preposition <HisyeoWord is='hoî'/> (At) combined with a
+"Position Word" acting as the nucleus.
 
 ### Formula:
 
@@ -33,42 +57,27 @@ nucleus, followed by the possessive connector <HisyeoWord is='yê'/> (of).
 
 ## Position Words
 
-While these words may belong to other word classes (such as modifiers or verbs), when placed in this specific syntactic slot, they function as the nucleus of the phrase to define location.
+While these words may belong to other word classes (such as modifiers or verbs),
+when placed in this specific syntactic slot, they function as the nucleus of the
+phrase to define location.
 
-| English | Hîsyêô | Usage Example | Literal Meaning |
-|---------|--------|---------------|-----------------|
-| Top / Summit       | <HisyeoWord is='solwôc'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='solwôc'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/> | At the top of the house |
-| High / Above       | <HisyeoWord is='cên'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='cên'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/> | At the high-point of the house |
-| Bottom / Base      | <HisyeoWord is='tûndû'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='tûndû'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/> | At the bottom of the house |
-| Low / Below        | <HisyeoWord is='sêl'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='sêl'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/> | At the low-point of the house |
-| Inside / Interior  | <HisyeoWord is='lîmîen'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='lîmîen'/> <HisyeoWord is='yê'/> <HisyeoWord is='dibo'/> | At the inside of the box |
-| Outside / Exterior | <HisyeoWord is='wokto'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='wokto'/> <HisyeoWord is='yê'/> <HisyeoWord is='dibo'/> | At the outside of the box |
-| Front / Anterior   | <HisyeoWord is='fôhon'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='fôhon'/> <HisyeoWord is='yê'/> <HisyeoWord is='nîmû'/> | At the front of you |
-| Back / Posterior   | <HisyeoWord is='soden'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='soden'/> <HisyeoWord is='yê'/> <HisyeoWord is='nîmû'/> | At the back of you |
-| Side / Flank       | <HisyeoWord is='sôbo'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='sôbo'/> <HisyeoWord is='yê'/> <HisyeoWord is='oûtô'/> | At the side of the car |
-
-## Linear Prepositions
-
-In addition to the "free" spatial words above, Hîsyêô has two specific
-prepositions used for describing linear relationships in both space and time.
-These are used when the relationship is sequential rather than purely
-positional.
-
-| Preposition | Meaning | Usage |
-|-------------|---------|-------|
-| <HisyeoWord is='ilik'/> | Preceding / Before | Used for things that come before the reference point in a line or sequence. |
-| <HisyeoWord is='cihôû'/> | Succeeding / After | Used for things that come after the reference point in a line or sequence. |
-
-<HisyeoTabs>
-    <p>nîo li totsi ilik noyo.&emsp;<em>He stands preceding me (in line).</em></p>
-    <p>nûs ke li gô cihôû lono ôfo.&emsp;<em>We will be [there] after today.</em></p>
-</HisyeoTabs>
+| English            | Hîsyêô                    | Usage Example                                                                                   | Literal Meaning                |
+|--------------------|---------------------------|-------------------------------------------------------------------------------------------------|--------------------------------|
+| Front / Anterior   | <HisyeoWord is='fôhon'/>  | <HisyeoWord is='hoî'/> <HisyeoWord is='fôhon'/> <HisyeoWord is='yê'/> <HisyeoWord is='nîmû'/>   | At the front of you            |
+| Back / Posterior   | <HisyeoWord is='soden'/>  | <HisyeoWord is='hoî'/> <HisyeoWord is='soden'/> <HisyeoWord is='yê'/> <HisyeoWord is='nîmû'/>   | At the back of you             |
+| Top / Summit       | <HisyeoWord is='solwôc'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='solwôc'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/> | At the top of the house        |
+| Bottom / Base      | <HisyeoWord is='tûndû'/>  | <HisyeoWord is='hoî'/> <HisyeoWord is='tûndû'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/>  | At the bottom of the house     |
+| High / Above       | <HisyeoWord is='cên'/>    | <HisyeoWord is='hoî'/> <HisyeoWord is='cên'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/>    | At the high-point of the house |
+| Low / Below        | <HisyeoWord is='sêl'/>    | <HisyeoWord is='hoî'/> <HisyeoWord is='sêl'/> <HisyeoWord is='yê'/> <HisyeoWord is='niwos'/>    | At the low-point of the house  |
+| Inside / Interior  | <HisyeoWord is='lîmîen'/> | <HisyeoWord is='hoî'/> <HisyeoWord is='lîmîen'/> <HisyeoWord is='yê'/> <HisyeoWord is='dibo'/>  | At the inside of the box       |
+| Outside / Exterior | <HisyeoWord is='wokto'/>  | <HisyeoWord is='hoî'/> <HisyeoWord is='wokto'/> <HisyeoWord is='yê'/> <HisyeoWord is='dibo'/>   | At the outside of the box      |
+| Side / Flank       | <HisyeoWord is='sôbo'/>   | <HisyeoWord is='hoî'/> <HisyeoWord is='sôbo'/> <HisyeoWord is='yê'/> <HisyeoWord is='oûtô'/>    | At the side of the car         |
 
 ## Additional Examples
 
 <HisyeoTabs>
     <p><strong>The cat is under the table.</strong>&emsp;mocko (li gô) hoî tûndû yê mîêbil.&emsp;<em>(The cat is located at the bottom of the table.)</em></p>
-    <p><strong>Wait inside the car.</strong>&emsp;kûu motsi hoî lîmîen yê oûtô.&emsp;<em>(Wait at the interior of the car.)</em></p>
+    <p><strong>Wait inside the car.</strong>&emsp;kûu motsi ilik oûtô.&emsp;<em>(Wait at the interior of the car.)</em></p>
     <p><strong>He stood in front of me.</strong>&emsp;nîo li totsi hoî fôhon yê noyo.&emsp;<em>(He stood at the front of me.)</em></p>
 </HisyeoTabs>
 
