fixes for new radial spatials

--- a/docs/lessons/food-and-drink.mdx
+++ b/docs/lessons/food-and-drink.mdx
@@ -64,28 +64,33 @@ The tools used for eating are named after the specific action they perform.
 
 A <HisyeoWord is='xolu'/> is used for both drinks (<HisyeoWord is='îskô'/>) and soups (<HisyeoWord is='côûfon'/> <HisyeoWord is='fecko'/>, lit: liquid meal).
 
+<HisyeoTabs>
+    <p>côûfon fecko li gô ilik xolu.&emsp;<em>The soup is in the bowl.</em></p>
+    <p>îskô hôktun li gô ilik xolu.&emsp;<em>The milk is in the cup.</em></p>
+</HisyeoTabs>
+
 :::
 
 ## Common Foods
 
 ### Ingredients & Staples
 
-| English       | Hîsyêô    |
-|---------------|-----------|
-| Fruit         | <HisyeoWord is='kûôxi    '/> |
-| Vegetable     | <HisyeoWord is='ûnfûnô   '/> |
-| Meat          | <HisyeoWord is='oksûn    '/> |
-| Legumes       | <HisyeoWord is='undofôl  '/> |
-| Cereal / Grain| <HisyeoWord is='kûkmut   '/> |
-| Nut           | <HisyeoWord is='ôzîl     '/> |
-| Bread         | <HisyeoWord is='bîek     '/> |
-| Pasta         | <HisyeoWord is='toliyo   '/> |
-| Fat / Grease  | <HisyeoWord is='cîbon    '/> |
-| Sugar / Sweet | <HisyeoWord is='sûît     '/> |
-| Water         | <HisyeoWord is='xîmu     '/> |
-| Herb          | <HisyeoWord is='hôncôû   '/> |
-| Spice         | <HisyeoWord is='kîûngô   '/> |
-| Alcohol       | <HisyeoWord is='îskô cûbû'/> |
+| English        | Hîsyêô                       |
+|----------------|------------------------------|
+| Fruit          | <HisyeoWord is='kûôxi    '/> |
+| Vegetable      | <HisyeoWord is='ûnfûnô   '/> |
+| Meat           | <HisyeoWord is='oksûn    '/> |
+| Legumes        | <HisyeoWord is='undofôl  '/> |
+| Cereal / Grain | <HisyeoWord is='kûkmut   '/> |
+| Nut            | <HisyeoWord is='ôzîl     '/> |
+| Bread          | <HisyeoWord is='bîek     '/> |
+| Pasta          | <HisyeoWord is='toliyo   '/> |
+| Fat / Grease   | <HisyeoWord is='cîbon    '/> |
+| Sugar / Sweet  | <HisyeoWord is='sûît     '/> |
+| Water          | <HisyeoWord is='xîmu     '/> |
+| Herb           | <HisyeoWord is='hôncôû   '/> |
+| Spice          | <HisyeoWord is='kîûngô   '/> |
+| Alcohol        | <HisyeoWord is='îskô cûbû'/> |
 
 ### Describing Flavor & Smell
 
