--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -94,7 +94,7 @@ Sometimes the name of the place where we live is not well known, in that case,
 we can zoom out and talk about the region that it is located in.
 
 <HisyeoTabs>
-    <p>noyo niwos sinsî cûtî hoî fenûo fîtîkôs sôltûstik yê kûôcyo Kenudu.&emsp;<em>I live in a small town in the northwest region of Canada.</em></p>
+    <p>noyo niwos sinsî cûtî ilik fenûo fîtîkôs sôltûstik yê kûôcyo Kenudu.&emsp;<em>I live in a small town in the northwest region of Canada.</em></p>
     <p>nîmû monodo sî sinsî Tuhêmu ko. ni (li gô) hoî fenûo sêl Seklumentôû sôltûstik.&emsp;<em>Have you not heard of Tehama? It's in the North Sacramento Valley.</em></p>
     <p>môi nûs bi konbokbo yoûtî niwos ûnhilun yê fenûo sinsî Lozil Bouk yê sinsî Xikogô.&emsp;<em>We mostly all live around the Rogers Park neighborhood of Chicago.</em></p>
     <p>nîmû sûko xe tûu nô sêl lûcik hoî fenûo tôxûtsi êto Olbî ko.&emsp;<em>Do you like to go skiing in the Alps?</em></p>
