--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -203,7 +203,7 @@ or has residual spiritual energy of some kind. After finishing the delineation
 of the space, say this prayer:
 
 <HisyeoTabs>
-    <p>ôfo li eloi yê boxô kôdus onô ûn hoî lîmîen yê ni li boxô til fos ôtsôtot dî kûsowî.&emsp;<em>This is the boundary of the shrine and within it, a place for [god(s)] to manifest.</em></p>
+    <p>ôfo li eloi yê boxô kôdus onô ûn ilik ni li boxô til fos ôtsôtot dî kûsowî.&emsp;<em>This is the boundary of the shrine and within it, a place for [god(s)] to manifest.</em></p>
 </HisyeoTabs>
 
 Now that the shrine has been swept of shards and marked for divination, it is time to cleanse the sacred space.
