--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -88,7 +88,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>êto umo wohî xonluk xe ofek wutun înbolî xe hoî wîk, li cifulo hoî ûnhilun yê môtô fîmôsyôs.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
 <p>ônî doknû onô yê dibo yê hûlû in zohît et onô li sî zîgîl mût sokofû.&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>umo moskûl xonluk kut onô yê gîto onô nîltûgu sî hoî zinkon kon gîk.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
-<p>hoî solwôc yê tôxûtsi bûmî hoî lîmîen yê niwos cûtî niwos sî û umo wohî nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
+<p>hoî solwôc yê tôxûtsi bûmî ilik îlê hîyôlî cûtî niwos sî û umo wohî nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
 <p>hoî wokût yê kon niwos yê fenûo londuluk onô û nûs bi êto li nô tô wowoê hoî comen zonwul onô.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
 <p>hoî wokût zik û monodo sûn sinsî cênbô ke li gîk.&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>hoî fêlkonô yê gôyu onô yê xûto onô û tîton ni li sî infultîn bi cîes mût kilukû.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
@@ -161,7 +161,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>môî mênyûu li sî gîk lêkin mênyûu Meli.&emsp;<em>All the children came except Mary.</em></p>
 <p>umo Zek ogolol zûngô mûlû yê îbûwê cûtî lunsol ni mût zomo xîmu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
 <p>niwos cômêl ôfo li sî totsi hoî tôxûtsi bûmî sêl hoî yoûtî mônbili xe sûn sinsî onô.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
-<p>hoî bitûn hêlxun xôn yê yogô ûsên tût û dûî umo nokdo sityo hoî wokto yê zinkon onô yê niwos cômêl nîo.&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
+<p>hoî bitûn hêlxun xôn yê yogô ûsên tût û dûî umo nokdo sityo cihôû zinkon onô yê niwos cômêl nîo.&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
 <p>mût tîmîok nûs somo tîmîok Zekô.&emsp;<em>Our bird's name is Jacko.</em></p>
 <p>xûto onô fisun tîton onô mût xômûtlô.&emsp;<em>The river knows the way to the sea.</em></p>
 <p>oûtô xîmu li nô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
