--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -66,7 +66,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     tôxûtsi bûmî cênbô ni ûn bîômu nomû ni misli comen kûkmut fos û oûtô comen
     li sî êo kûmun bûmî gîto gitno comen lûntî hoî; bi zelen û ni li xoînbo în
     dêko tôlkî misli nôkso xe fuî gîto êmê hoî okûlo ni; bi kônyêc ôlê ni bi
-    mûlû li sî fonmot hoî lîmîen yê xîmu fildonbun ûn wôlik. bi cên eswen ûn cên
+    mûlû li sî fonmot ilik xîmu fildonbun ûn wôlik. bi cên eswen ûn cên
     eswen li sî nô û tîmîok kon wêtodû cênbô onô mût okoxu; bînê ôtsôtot nûs
     lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo dên oûtô onô. mênyûu
     moskûl yê hondon kon bôklôn et nîecni onô boîfôn êto kut elfû unbû bûndûkî
@@ -92,7 +92,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     woyû, conwêbo sî unbû sûn ûlôgun yê otôs môî et xe li êo kobût ôlê bêlêtê
     onô yê sêmoi tô. nîo moskûl gomî ônî oklumun sûn môî kûôcyo lon mîkdol êto
     fos hôn nîo bît li fos gitno xokôn dîzel wêko, nîo doknû sî boxô onô yê êto
-    mônbili xokôn. nîo li sî gîk hoî lîmîen yê oûtô onô ûn û mênyûu moskûl yê
+    mônbili xokôn. nîo li sî gîk ilik oûtô onô ûn û mênyûu moskûl yê
     hondon kon bôklôn et onô bi ôhêl li gîk mût ônî oklumun yê cizî nîo hoî fos
     ôtsôtot nûs lufono sî zomo cênbô yê mûxî — kut zomo cênbô yê mûxî cûtî. nîo
     li êo sûnbîdû hoî ûnhilun yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo
@@ -102,7 +102,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     foko yoldûn yê nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô
     ni til fos mûxî onô cihôû îbûdû kôî fuî yôk zîcoû onô yê xe li gîk sî
     hoî nîo moskûl. foko yoldûn onô fûtsûn sî hûkun yê nîo moskûl lêkin kut mûxî
-    ônî kut wêko sî cizî ni hoî lîmîen yê kut ônî doknû onô li sî nô bomoge
+    ônî kut wêko sî cizî ni ilik kut ônî doknû onô li sî nô bomoge
     homûs mût cîkînîl yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo sî nîo
     moskûl. boxô onô li tônkô misli môtô ûn û nozî onô li sî gîk hoî luhû yê nîo
     moskûl. bi gonzîl yê tônkô û nîo moskûl li sî êo fonmot ôlê ônî doknû onô ûn
