Fix more radial metaphor usages

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -726,7 +726,7 @@ Number of syllables:
         and wakes me.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        noyo hoî môî wokût yosten sî kutin conzodo hoî wûôt kîldo yê oûtô kîskô
+        noyo hoî môî wokût yosten sî kutin conzodo hoî wûôt côt yê oûtô kîskô
         hoî fenûo Bitin. hôn kut û noyo hoî yôk wokut ôlê cizî noyo kôî li êo
         lohot hoî sityo. bînê ônî tuluti dîzel bi sodolun kôto bi oltû lôîcôk;
         yodo lôc môî lôîcôk: nîo kôs gônyumon conzodo. bi ûtok li cuskîdô cûnfû
