--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -137,7 +137,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûu li nô ofek motûo moskûl yodo motûo wohî.&emsp;<em>Come with your father or mother.</em></p>
 <p>noyo li bîcûon lêkin li xowosê êto.&emsp;<em>I am tired, but very happy.</em></p>
 <p>nîo kelo kontol tô yôn in kontol yê môkôfo in ûslêk et kûzoû nîo.&emsp;<em>He played a tune on his wonderful flute.</em></p>
-<p>mût kônyêc yê wuto tukwos û lono dî êto gosîl eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
+<p>mût kônyêc yê wuto tukwos û lono dî êto cencî eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
 <p>zomo cênbô yê umo gûexo tuluti tôxûtsi bûmî onô ûn comen onô.&emsp;<em>A company of soldiers marched over the hill and across the meadow.</em></p>
 <p>yogô kut yê kîso li foko sunyotnî êto.&emsp;<em>The first part of the story is very interesting.</em></p>
 <p>tîmîok nêlô onô mûncotî yoûtî îbûwê hoî xolu zîlyoîs onô ûn li êo cên ôlê xîmu mût dînzoû onô.&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
@@ -199,7 +199,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>ofek nîo xe misli foko mefûs nûs, nûs li yôk ôsôlê yê bongôsî.&emsp;<em>With him as our protector, we fear no danger.</em></p>
 <p>môî uyo moxo nîo xe li bolce kûmun li lîsto li towê, li fos bi cîes wêko sî ni hoî dibo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
 <p>li sî xoînbo û fos nîo wohî li hulûkô, oldis gonîso yê nîo moskûl misli towê tîmîok.&emsp;<em>Light he thought her, like a feather.</em></p>
-<p>hôn xokôn yogô ûsên nîôk ûn yogô ûsên kon kudûdo û mênyûu yê siskin motûo et nûs cifû kon monodo kîldo mût nûs.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
+<p>hôn xokôn yogô ûsên nîôk ûn yogô ûsên kon kudûdo û mênyûu yê siskin motûo et nûs cifû kon monodo côt mût nûs.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
 <p>hoî bîômu kêlôs nûs û hûlû onô bi môcîbo li lûntî hôn yogô ûsên cunyû.&emsp;<em>In our climate the grass remains green all winter.</em></p>
 <p>umo moskûl xonluk onô xe okôt sî tômôs onô, li sî cok.&emsp;<em>The boy who brought the book has gone.</em></p>
 <p>ôfo li înbolî onô fos nîo li sî êo kôlmûdul ôlê ni.&emsp;<em>These are the flowers that you ordered.</em></p>
