Add info admon about radial time vocab

--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -41,6 +41,25 @@ These two prepositions handle the fundamental relationship of containment and se
     <p>cihôû lono ôfo...&emsp;<em>After today...</em><small>(On top of today / In the future)</small></p>
 </HisyeoTabs>
 
+:::info The Vocabulary of Radial Time
+
+Because Hîsyêô views time as **growth** (like tree rings or layers of sediment) rather than a straight line, we avoid linear adjectives like "long" or "short" when talking about duration. Instead, we use words describing **volume**, **thickness**, and **depth**.
+
+| Concept                 | Linear Metaphor (Avoid) | Radial Metaphor (Use) | Hîsyêô Word                                       |
+|:------------------------|:------------------------|:----------------------|:--------------------------------------------------|
+| **Long Duration**       | "A long time"           | **A thick time**      | <HisyeoWord is='côt'/>                            |
+| **Short Duration**      | "A short time"          | **A thin time**       | <HisyeoWord is='cencî'/>                          |
+| **Distant Past/Future** | "Far away"              | **Deep**              | <HisyeoWord is='zîlyoîs'/>                        |
+| **Near Past/Future**    | "Close"                 | **Shallow**           | <HisyeoWord is='dohîl'/>                          |
+| **Timeline**            | "Line"                  | **Ring/Circle**       | <HisyeoWord is='wutun'/> <HisyeoWord is='wokût'/> |
+
+**Examples:**
+<HisyeoTabs>
+    <p>nûs motsi sî lon wokût côt.&emsp;<em>"We waited for a <strong>thick</strong> (long) time."</em></p>
+    <p>ni bi sî gô hoî wokût zîlyoîs.&emsp;<em>"It happened in <strong>deep</strong> (distant) time."</em></p>
+</HisyeoTabs>
+:::
+
 ## Locative Nucleus Construction
 
 For specific physical orientations that are not strictly "In" or "On," Hîsyêô
