--- a/docs/sciences/mathematics.mdx
+++ b/docs/sciences/mathematics.mdx
@@ -3,4 +3,283 @@ sidebar_position: 13
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Mathematics
+
+Mathematics, or sôhoûk, is considered the language of the First Law—the underlying logic of the universe before the Shattering. It is the study of quantity, structure, and change.
+
+Basic Vocabulary
+
+English
+
+Hîsyêô
+
+Literal Meaning
+
+Number
+
+tûek
+
+Count / Number
+
+Zero
+
+xûnyu
+
+Void / Nothing
+
+Infinity
+
+môî
+
+All / Everything
+
+Equation
+
+wofok sôhoûk
+
+Logic agreement
+
+Shape
+
+xîncûon
+
+Form / Shape
+
+Measurement
+
+dûstu
+
+Measure / Degree
+
+Operations
+
+Operations are often expressed using prepositions or specific verbs.
+
+Operation
+
+Hîsyêô
+
+Example (2 + 2 = 4)
+
+Plus (Add)
+
+ûn (and)
+
+Dûî ûn dûî li nonkû.
+
+Minus (Subtract)
+
+sûn (from)
+
+Dûî sûn nonkû li dûî. (Two from four is two).
+
+Times (Multiply)
+
+xokôn (each)
+
+Dûî xokôn dûî li nonkû. (Two each two is four).
+
+Divide
+
+fun (part)
+
+Dûî fun nonkû li dûî. (Two parts of four is two).
+
+Equals
+
+li (is)
+
+
+
+Algebra
+
+Algebra involves the study of symbols and the rules for manipulating these symbols.
+
+English
+
+Hîsyêô
+
+Literal Meaning
+
+Variable
+
+tûek zik
+
+Question number / Unknown number
+
+Constant
+
+tûek cizî
+
+Standing/Staying number
+
+Function
+
+ondo sôhoûk
+
+Logic preparation/process
+
+Graph
+
+toswîl sôhoûk
+
+Logic drawing
+
+To Solve
+
+fisun
+
+To know / Find out
+
+Example Problem:
+Kûu fisun tûek zik (X).
+Solve for X.
+
+Dûî xokôn tûek zik li dus.
+2 times X equals 10. (Answer: 5)
+
+Geometry (xîncûon)
+
+Geometry deals with the properties of space and the forms that occupy it.
+
+Fundamental Elements
+
+English
+
+Hîsyêô
+
+Description
+
+Point / Dot
+
+bindû
+
+A specific location in space.
+
+Line
+
+gîto
+
+A connection between points.
+
+Edge / Rim
+
+dînzoû
+
+The boundary of a shape.
+
+Straight
+
+mûstokîn
+
+Lacking curvature.
+
+Curved
+
+wonkûk
+
+Bending or deviating from straightness.
+
+Shapes & Solids
+
+English
+
+Hîsyêô
+
+Description
+
+Triangle
+
+mûkônun
+
+A three-sided polygon.
+
+Circle / Ring
+
+wutun
+
+A continuous curved line equidistant from a center.
+
+Sphere
+
+gundolê
+
+A perfectly round 3D object.
+
+Block
+
+dîncî
+
+A solid object with flat faces (cube/rectangular prism).
+
+Tube
+
+môkôfo
+
+A hollow cylinder.
+
+Cone
+
+tohilôk
+
+A solid tapering to a point from a circular base.
+
+Pyramid
+
+cokwoli
+
+A structure with triangular outer surfaces.
+
+Mûkônun fuî sôbo niswî.
+A triangle has three sides.
+
+Gîto mûstokîn li xôn eswen en gîto wonkûk.
+A straight line is better than a curved line.
+
+Describing Polygons
+
+For shapes that do not have a specific name, you can construct a descriptive name using xîncûon (shape) followed by the number of sobô (sides).
+
+Formula: xîncûon + [Number]
+
+English
+
+Hîsyêô
+
+Literal Meaning
+
+Pentagon
+
+xîncûon tîû
+
+Shape [of] five
+
+Hexagon
+
+xîncûon toû
+
+Shape [of] six
+
+Octagon
+
+xîncûon tukwos
+
+Shape [of] eight
+
+Polygon
+
+xîncûon sobô
+
+Shape [of] sides
+
+Xîncûon toû fuî sobô toû.
+A hexagon has six sides.
+
+<HisyeoTooltip/>
