Fix noun page role references to match new radial metaphor

--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -584,8 +584,8 @@ The <HisyeoWord is='ilik'/> particle precedes this noun phrase.
 
 This role is used for a noun phrase that represents something that the action or
 state of the predicate is *preceded* by, whether in time or space. In English,
-this represents some of the senses of the words "before", "prior to", or "in
-front of". In linguistics, this is referred to as the **antessive** case.
+this represents some of the senses of the words "before", "prior to", or "in".
+In linguistics, this is referred to as the **antessive** case.
 
 <HisyeoTabs>
     <p>noyo fôlun fos ôfo li mûlû ilik lono dûsul.&emsp;<em>I want this done before Monday.</em></p>
@@ -605,7 +605,7 @@ The <HisyeoWord is='cihôû'/> particle precedes this noun phrase.
 
 This role is used for a noun phrase that represents something that the action or
 state of the predicate is *followed* by, whether in time or space. In English,
-this represents some of the senses of the words "after", "post", or "behind". In
+this represents some of the senses of the words "after", "post", or "on". In
 linguistics, this might be considered a kind of temporal or terminative case or
 perhaps most likely the **postessive** case.
 
